# trend-trading-bot

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: csv.rs  lib.rs  main.rs  trading_bot.rs  utils.rs
app/src/exchanges/: binance.rs
app/src/models/: binance.rs  kline.rs  mod.rs
data/historical/: BTCUSDT-1d-2021.csv  BTCUSDT-1w-2013-2021.csv  BTCUSDT-1w-2021.csv  BTCUSDT-4h-2021.csv
data/tests/: write.csv
src/: main.rs  utils.rs
ta/: Cargo.toml
ta/src/: bolling.rs  ema.rs  lib.rs  macd.rs  rsi.rs  sma.rs
