[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

tokio = { version= "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ta = { path = "../ta" }

teloxide = { version = "0.4", features = ["frunk", "macros", "auto-send"] } 

log = "0.4.8"
pretty_env_logger = "0.4.0"
csv = "1.1"
chrono = "0.4"

# for websocket
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
url = "2.1.0"

hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"

async-trait = "0.1.52"
rand = "0.8.5"